feat: update core chatbot